<resources>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">Add Object</string>
    <string name="label1">Label 1</string>
    <string name="label2">Label 2</string>
    <string name="label3">Label 3</string>
    <string name="text1">Text 1</string>
    <string name="text2">Text 2</string>
    <string name="text3">Text 3</string>
    <string name="add">ADD</string>
    <string name="clear">CLEAR</string>
</resources>
